--- a/cloud2020/cloud-provider-payment8002/pom.xml
+++ b/cloud2020/cloud-provider-payment8002/pom.xml
@@ -11,7 +11,7 @@
 
     <artifactId>cloud-provider-payment8002</artifactId>
     <dependencies>
-        <!--包含了sleuth+zipkin-->
+        <!--包含了sleuth+zipkin2-->
         <!--<dependency>-->
         <!--<groupId>org.springframework.cloud</groupId>-->
         <!--<artifactId>spring-cloud-starter-zipkin</artifactId>-->
